--- a/styles/sideSection.css
+++ b/styles/sideSection.css
@@ -6,36 +6,43 @@
     font-family: 'poppins','sans-serif';
 }
 
-a{
-    text-decoration: none;
-    color:black;
-}
-.sidebar{
+.sidebar {
+    /* border: 2px solid red; */
     width: 15%;
     height: 100vh;
     position: fixed;
-    top:0;
+    top: 0;
     z-index: 50;
     padding: 10px;
     padding-top: 80px;
- 
-}
-.sidebar-upper a {
-   padding: 8px;
-   margin-bottom: 2px;
-}
-.sidebar-upper a img{
+   
+  }
+  
+  .smaller-sidebar {
+    width: 5%;
+  }
+  
+  .smaller-sidebar a p {
+    display: none;
+  }
+  
+  .sidebar-upper a {
+    padding: 12px;
+    margin-bottom: 2px;
+  }
+  
+  .sidebar-upper a img {
     width: 20px;
     margin-right: 20px;
-    margin-left: 10px;
-    
-}
-.sidebar-upper a:first-child{
+  }
+  
+  .sidebar-upper a:first-child {
+    /* border: 2px solid red; */
     border-radius: 10px;
-    background-color: rgb(235, 233, 233);
- }
- .sidebar-upper a:hover{
-
+    background-color: #2e2e2e;
+  }
+  
+  .sidebar-upper a:hover {
     border-radius: 10px;
-    background-color: rgb(235, 233, 233);
- }
+    background-color: #2e2e2e;
+  }
